--- a/www/index.html
+++ b/www/index.html
@@ -10,14 +10,14 @@
 <body>
     <header>
         <h1>My Personal Information</h1>
-        <img src="/image/me.jpg" alt="Your Profile Image" class="profile-image">
+        <img src="https://storage.googleapis.com/pic_github/me.jpg" alt="Your Profile Image" class="profile-image">
         <p>Afriza Tri Rizki<br>Cloud Computing Cohort</p>
     </header>
 
     <div class="container">
         <div class="my-story">
             <div class="story-header">
-                <img src="/image/lampu.jpg" alt="Cloud Icon" class="story-icon">
+                <img src="https://storage.googleapis.com/pic_github/lampu.jpg" alt="Cloud Icon" class="story-icon">
                 <h2>My Story</h2>
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis libero et risus sodales efficitur. Vestibulum ac tortor nec velit feugiat accumsan. In hac habitasse platea dictumst. Donec convallis mi vitae ligula volutpat lacinia.</p><br>
@@ -35,9 +35,9 @@
     <div class="social-icons">
         <p class="find-me">Hello Im here!</p>
         <div class="icons">
-            <a href="https://github.com/cuutt24" target="_blank"><img src="/image/github.jpg" alt="GitHub"></a> 
-            <a href="https://www.linkedin.com/in/afriza-tri-rizki-0278bb2b5/" target="_blank"><img src="/image/linkedin.jpg" alt="LinkedIn"></a> 
-            <a href="https://www.instagram.com/cuutt24/" target="_blank"><img src="/image/ig.jpg" alt="Instagram"></a>
+            <a href="https://github.com/cuutt24" target="_blank"><img src="https://storage.googleapis.com/pic_github/github.jpg" alt="GitHub"></a> 
+            <a href="https://www.linkedin.com/in/afriza-tri-rizki-0278bb2b5/" target="_blank"><img src="https://storage.googleapis.com/pic_github/linkedin.jpg" alt="LinkedIn"></a> 
+            <a href="https://www.instagram.com/cuutt24/" target="_blank"><img src="https://storage.googleapis.com/pic_github/ig.jpg" alt="Instagram"></a>
         </div>
     </div>
 
